2008-07-05  Matthias Clasen  <mclasen@redhat.com>

	* NEWS: Updates

2008-07-04  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkiconview.c:
	* gtk/gtkfontsel.c:
	* gtk/gtkscalebutton.c: Small doc fixes.

2008-07-04  Matthias Clasen  <mclasen@redhat.com>

	* gdk/gdkevents.c:
	* gdk/x11/gdktestutils-x11.c: Small doc fixes

2008-07-04  Matthias Clasen  <mclasen@redhat.com>

	* gtk/tests/defaultvalue.c: Omit some more untestable properties.

	* gtk/gtkmenu.c: Fix the initial value of the monitor property.

	* gtk/gtkentry.c: Fix the property getter for text-length property.

	* gtk/gtkaccelgroup.c: Fix default value for modifier-mask property.

2008-07-04  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkmenu.c: Debork the attach-widget property.

2008-07-04  Michael Natterer  <mitch@imendio.com>

	Fix make check:

	* gtk/Makefile.am: remove GTK_DISABLE_DEPRECATED from INCLUDES
	again :-(

	* gtk/gtkclist.c
	* gtk/gtkcombo.c
	* gtk/gtkctree.c
	* gtk/gtklist.c
	* gtk/gtklistitem.c
	* gtk/gtknotebook.c
	* gtk/gtkobject.c
	* gtk/gtkoldeditable.c
	* gtk/gtkpixmap.c
	* gtk/gtktext.c
	* gtk/gtktipsquery.c
	* gtk/gtktree.c
	* gtk/gtktreeitem.c: don't #define it again before including
	gtkalias.h after it has been #undef'ed before.

2008-07-04  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkentry.c (_gtk_entry_reset_im_context): set need_im_reset
	to FALSE instead of 0.

2008-07-04  Michael Natterer  <mitch@imendio.com>

	Allocate with GSlice:

	* gtk/gtkassistant.c: GtkAssistantPage
	* gtk/gtkcellview.c: GtkCellViewCellInfo
	* gtk/gtkentry.c: GtkEntryPasswordHint, PopupInfo
	* gtk/gtkfilefilter.c: FilterRule
	* gtk/gtknotebook.c: GtkNotebookPage

2008-07-04  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkcombobox.c: allocate ComboCellInfo with GSlice.

2008-07-04  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkprintoperation.c (print_pages): change "error_dialog"
	variable to GtkWidget fo fix two warnings.

2008-07-04  Michael Natterer  <mitch@imendio.com>
